--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ form {
 .container2 {
   margin: 120px auto;
   max-width: 800px;
-  background-color: rgb(182, 239, 182);
+
   border-radius: 5px;
   padding: 20px auto;
   text-align: center;
@@ -57,14 +57,15 @@ form {
 }
 .recipe {
   font-size: 15px;
-  background-color: rgb(182, 239, 182);
+  background-color: rgb(223, 238, 192);
   line-height: 24px;
   border-left: 3px solid rgb(207, 168, 206);
   box-shadow: 0px 20px 60px rgb(65, 50, 100, 0.08);
   border-radius: 5px;
 }
 fotter {
+  font-weight: 400;
   padding-top: 10px;
-  font-size: 13px;
+  font-size: 15px;
   margin-top: 30px;
 }
